[gd_scene load_steps=2 format=3 uid="uid://c1mu54xpg43yf"]

[ext_resource type="Script" uid="uid://1iu5m3awm6wf" path="res://scripts/game_over.gd" id="1_yvnxv"]

[node name="GameOverMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_yvnxv")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0980392, 0.0980392, 0.0980392, 0.478431)

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.0
offset_top = -170.0
offset_right = 216.0
offset_bottom = 186.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
color = Color(0.00895073, 0.120105, 0.0916936, 0.478431)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -150.0
offset_right = 150.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Game Over!"
horizontal_alignment = 1

[node name="RankingsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Rank1" type="Label" parent="VBoxContainer/RankingsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "1st: Player 1"
horizontal_alignment = 1

[node name="Rank2" type="Label" parent="VBoxContainer/RankingsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "2nd: Player 2"
horizontal_alignment = 1

[node name="Rank3" type="Label" parent="VBoxContainer/RankingsContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "3rd: Player 3"
horizontal_alignment = 1

[node name="Rank4" type="Label" parent="VBoxContainer/RankingsContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "4th: Player 4"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Restart"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
